# UIUC

./: .gitignore  .gitmodules  README.md
CS241/: README.md
CS241/Chapter0/ctypes/: CMakeLists.txt  ctypes.kdev4
CS241/Chapter0/ctypes/.kdev4/: ctypes.kdev4
CS241/Chapter0/helloWorld/: CMakeLists.txt  helloWorld.kdev4  main.c
CS241/Chapter0/helloWorld/.kdev4/: helloWorld.kdev4
CS241/Chapter2/: loggingLS.c  silly.c  superSilly.c
CS410/MPs/MP1/: README.md  example.py
CS410/MPs/MP2/: README.md  bm25.avg_p.txt  bm25.py  inl2.avg_p.txt  search_eval.py  significance.txt
CS410/MPs/MP3/: README.md  classify.py  config.toml  requirements.txt
CS410/Week3/: POS-stuff.py
CS410/finalProject/: flickrapiScratch.py
CS410/techReview/: ExifData.odt  bib.md
CS425/Homeworks/: README.md
CS425/Homeworks/Hwk1/: Hw1-9Scratch.py  Nathan_Nard_HW_1-2.docx  Nathan_Nard_HW_1.docx  hw1-9TablesPath.xcf
CS425/Homeworks/Hwk2/: Hw2-1Scratch.py  Nathan_Nard_HW_2.docx  hw2p1.py  p10.xcf  p7.cpp  p7.ods  p7.py  p7.xcf  qp21.py
CS425/Homeworks/Hwk3/: Nathan_Nard_HW_3.docx
CS425/Homeworks/Hwk4/: Nathan_Nard_HW_4.docx
CS425/MPs/: README.md
CS425/MPs/mp1/: Application  Grader.sh  Log.cpp  Log.h  MP1Node.cpp  MP1Node.h  mp1.kdev4  valgrind.txt
CS425/MPs/mp2/: Application  CMakeLists.txt  MP1Node.cpp  MP1Node.h  MP2Node.cpp  MP2Node.h  run.sh
CS425/MPs/mp2/unitTests/: CMakeLists.txt  MP2NodeTest.cpp
CS425/week4/: Quiz3Scratch.py
CS427/MPs/: README.md
CS427/MPs/CodeSmells/CodeSmells/: pom.xml
CS427/MPs/Week9TestPractice/: SortAlgorithmBlackBoxTest.java
CS427/MPs/Week9TestPractice/Testing/: pom.xml
CS427/TeamFinalProject/: README.md
CS427/TeamFinalProject/FinalCodeSubmission/JSPFileLists/: ALLJspFiles.txt  UC822JspFiles.txt  UC93JspFiles.txt  UC94JspFiles.txt  UC96JspFiles.txt
CS427/TeamFinalProject/FinalCodeSubmission/JavaFileLists/: AllJavaFilesMadeByUs.txt  UC822JavaFiles.txt  UC93JavaFiles.txt  UC94JavaFiles.txt  UC96JavaFiles.txt
CS427/TeamFinalProject/iTrust/: .classpath  .gitignore  pom.xml
CS427/TeamFinalProject/iTrust/sql/: Obstetric-README.txt  createTables.sql  dropTables.sql
CS427/TeamFinalProject/iTrust/tokens/: StoredCredential
CS484/Hwks/: .~lock.Homework2.docx#  Homework2.docx  Homework3.docx  nnard2_hw1.docx
CS484/MPs/: .vimrc
CS484/MPs/mp0/: .gitignore  CMakeLists.txt  README.md  mp0-benchmark.o8065807  mp0-hello.o8065799  mp0-hello.o8065806
CS484/MPs/mp0/part1/: CMakeLists.txt  part1.cpp
CS484/MPs/mp0/part2/: CMakeLists.txt  part2.cpp  part2.h  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  timers.h  util.cpp
CS484/MPs/mp0/scripts/: batch_script.run  compile_script.run  hello_world.run  hello_world_singularity.run  submit_batch.sh
CS484/MPs/mp0/syscheck/: CMakeLists.txt
CS484/MPs/mp0/syscheck/ampi/: CMakeLists.txt  main.cpp
CS484/MPs/mp0/syscheck/charm/: CMakeLists.txt  Makefile
CS484/MPs/mp0/syscheck/mpi/: CMakeLists.txt  main.cpp
CS484/MPs/mp0/tests/: CMakeLists.txt  bench_mpi_example.cpp  gtest-mpi-listener.hpp  test_example.cpp  test_mpi_example.cpp
CS484/MPs/mp0/writeup/: cpuinfo.txt  cs484-identifier  mp0_nnard2.ms  part1_out.txt  part2_0_out.txt  part2_3_out.txt
CS484/MPs/mp1/: CMakeLists.txt  README.md  mp1-benchmark.o8158231  mp1-benchmark.o8158753  mp1-benchmark.o8163237  mp1-benchmark.o8163244  mp1-benchmark.o8163452  mp1-benchmark.o8163782  mp1-benchmark.o8163786  mp1-benchmark.o8163815
CS484/MPs/mp1/cmake/: cs484common.cmake
CS484/MPs/mp1/common/: basic.cpp  basic.h  naivelinalg.cpp  naivelinalg.h  util.cpp  util.h
CS484/MPs/mp1/multiply/: CMakeLists.txt  multiply.cpp  multiply.h
CS484/MPs/mp1/openmp/: CMakeLists.txt  openmp.cpp
CS484/MPs/mp1/scripts/: batch_script.run  compile_script.sh
CS484/MPs/mp1/tests/: CMakeLists.txt  allbench.cpp  alltests.cpp  find_tile_size.cpp  student_benchmarks.cpp
CS484/MPs/mp1/transpose/: CMakeLists.txt  best_tile_size.h  transpose.cpp
CS484/MPs/mp1/writeup/: 16gbench_results.txt  16multiply_results.txt  16openmp_results.txt  16tile_results.txt  16transpose_results.txt  8gbench_results.json  8gbench_results.txt  8multiply_results.txt  8tile_results.json  8tile_results.txt  8transpose_results.txt  cache_properties.txt  gbench_results.json  (+10 more)
CS484/Week1/: 1_1_a_Switches QC.pptx  1_1_b_Switches QC.pptx  1_2_a_Moores_Law QC.pptx  1_2_b_Moores_Law_and_parallelism QC.pptx  1_3_Motivation QC.pptx  1_4_Parallel_Conception QC.pptx  2_1_Control_flow QC.pptx  2_2_Latency_pipeline QC.pptx  2_3_Memory QC.pptx
CS484/Week11/: 13.4_Cost Model.pptx  13.5B_prefixBalancingWithOnesided.pptx  13.5_OneSided.pptx  14.1_Hybrid_MPI_OpenMP.pptx
CS484/Week12/: charm_1_CharmModel QC.pptx  charm_2_chares QC.pptx  charm_3_ChareArraysBrief QC.pptx  charm_5_AMPI_abridged QC.pptx
CS484/Week13/: 16_ParallelSorting.pptx  17_BroadcastsAndReductions.pptx  18_Isoefficiency_Scalability_QC.pptx
CS484/Week14/: FaultTolerance.pptx  cannonMatMul.pptx  interconnectTopologiesFinal.pptx
CS484/Week15/: 22_parDiscreteEvent.pptx  23_CombinatorialSearch.pptx  24_gpgpus.pptx
CS484/Week16/: 25_conclusion.pptx
CS484/Week2/: 2_4_Cache QC.pptx  2_5_Prefetch QC.pptx  2_6_Virtual_mem QC.pptx  3_1_CachesArrayLayouts QC.pptx  3_1_a_ArrayAllocation QC.pptx  3_2_CachesMatVecMpy QC.pptx  3_3_CacheOptimizations QC.pptx
CS484/Week3/: 4_1_Vectorization QC.pptx  4_2_profiling_papi QC.pptx  4_3_gprof.pptx  5_1_multiprocessorArch QC.pptx  5_2_SharedAddressSpaceFinal QC.pptx  5_3_OpenMP_1 QC.pptx  5_4_OpenMP_2 QC.pptx
CS484/Week4/: 6_1_OpenMP_parForBasics QC.pptx  6_2_OpenMP_privateVblsRednNew QC.pptx  6_2_b_OpenMP_firstprivateQC.pptx  6_2_c_OpenMP_ReductionsQC.pptx  6_3_Restructuring QC.pptx  7_1_Loop Schedules QC.pptx  7_2_ParallelConstruct QC.pptx  7_2_d_ParallelAndFor_QC.pptx
CS484/Week8/: 10.2_c11AtomicsAndQueues QC.pptx  10.3_c11_SPSC_Queues QC.pptx  10_1_pthreadsQCv2.pptx  12.1_Distmemmachines.pptx  12.2_BasicMPI.pptx
CS484/Week9/: 12.3_Send_RecvCalls.pptx  13.1a_Collectives1.pptx  13.1b_Collectives.pptx  13.2_SubCommunicators.pptx  13.3_Parallelprefix.pptx
CS498/MPs/MP0/: MP0.java  test.txt
(+287 files in other folders)
